Changing configuration files for mmv1

--- a/config/mmv1/consumer.properties
+++ b/config/mmv1/consumer.properties
@@ -1,5 +1,4 @@
 bootstrap.servers=kfk-source:9092
-exclude.internal.topics=true
-group.id=mirror-maker
+group.id=mirror-maker-poc
 auto.offset.reset=earliest
-partition.assignment.strategy=org.apache.kafka.clients.consumer.RoundRobinAssignor
+exclude.internal.topics=true
