--- a/config/mmv1/producer.properties
+++ b/config/mmv1/producer.properties
@@ -1,6 +1,2 @@
 bootstrap.servers=kfk-target:9092
-acks=-1
-batch.size=1
-client.id=mirror_maker_producer
-retries=2147483647
-max.in.flight.requests.per.connection=1
+client.id=mirror-maker-poc
